[Tests] (Updated and extended tests; Validator tests)
- Wrote validator tests for SignInDto, SignUpDto.
- Improved and updated tests for SecurityController.
- Moved RequestBody checks to validator tests.